# limn

./: .events.jsonl  .gitignore  .sprite  00.html  01a.html  01b.html  01c.html  02a.html  02b.html  02c.html  02d.html  02e.html  02f.html  02g.html  02h.html  03a.html  03b.html  03c.html  03d.html  03e.html  03f.html  03g.html  03h.html  03i.html  03j.html  03k.html  03l.html  03m.html  03n.html  03o.html  03p.html  04a.html  04b.html  04c.html  04d.html  04e.html  04f.html  04g.html  04h.html  04i.html  (+87 more)
.beads/: issues.jsonl  linguist-questions.txt
archive/: ARCHIVE-NOTE-NEXT-MD.md  NEXT-archived-2026-02-02.md
daemon/: activity.json
data/: adversarial-compositionality-v1.jsonl  coherence_metrics.json  definitions-limn.md  domain-expansion-corpus.md  domain-transfer-stress-test.md  hard-negative-pairs-v1.jsonl  hard-negatives-v3.jsonl  limn-in-limn-definitions.md  parallel-corpora-v1.md  semantic_neighbors.json
docs/: BOOTSTRAP-QUICK-REFERENCE.md  BOOTSTRAP.md  COHERENCE-INDEX.md  CVC-SATURATION.md  STATUS-REPORT.md  getting-started.md
examples/: README.md  addition.limn  basic-sentences.md  bidirectional.limn  chain.limn  conversations.md  hello.lmn  idioms-proverbs.md  input.json  operations.limn  package_workflow.md  poetry.md  temperature.limn  test_bidirectional_div.limn  test_chain_backward.limn  test_circular.limn  test_edge_cases.limn  using_packages.limn
experiments/: 001-untranslatable-words.md  INDEX.md  (+101 more)
limn-rs/: Cargo.toml
limn-rs/src/: ast.rs  cli.rs  error.rs  ipfs.rs  lexer.rs  main.rs  package.rs  parser.rs  registry.rs  solver.rs  value.rs
(+879 files in other folders)
